# rs

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Containerfile  Containerfile.deploy  Containerfile.release  Cross.toml  Makefile  PLAN.md  PROGRESS.md  PROMPT.md  README.md  TODOS.md  build.rs  compose.yml  docker-compose.yml
.agents/: generate.sh  prompt.md
.agents/skills/: browse-reference.md  build-app.md  explain-concepts.md  mcp-quickstart.md  onboard-new-user.md  quickstart.md  review-app.md  study-examples.md  ww-build-app.md  ww-concepts.md  ww-examples.md  ww-mcp-demo.md  ww-onboard.md  ww-quickstart.md  ww-reference.md  ww-review-app.md
.ai/skills/: concepts.md  design.md  examples.md  quickstart.md  reference.md  review.md
.githooks/: pre-push
.github/workflows/: changelog.yml  release.yml  rust.yml
.patches/libp2p-kad-0.48.0/: Cargo.toml
benches/: arc_cache.rs  glia_map.rs  kernel_dispatch.rs  streams.rs
capnp/: auction.capnp  cell.capnp  fs.capnp  http.capnp  ipfs.capnp  membrane.capnp  oracle.capnp  peer.capnp  routing.capnp  shell.capnp  stem.capnp  system.capnp
crates/: README.md
crates/atom/: Cargo.toml
crates/atom/examples/: atom_indexer.rs  finalizer.rs
crates/atom/src/: abi.rs  finalizer.rs  indexer.rs  lib.rs
crates/atom/tests/: finalizer_integration.rs  integration.rs  membrane_integration.rs  reorg_finalizer.rs  reorg_naive.rs
crates/atom/tests/common/: mod.rs
crates/auth/: Cargo.toml
crates/cache/: Cargo.toml
crates/cell/: Cargo.toml
crates/glia/: Cargo.toml  build.rs
crates/guest/: README.md
crates/ipfs/: Cargo.toml
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: lib.rs
crates/membrane/: Cargo.toml  build.rs
crates/membrane/src/: epoch.rs  lib.rs  membrane.rs  terminal.rs
crates/protocol/: Cargo.toml
crates/rpc/: Cargo.toml
crates/schema-id/: Cargo.toml  build.rs
crates/schema-id/src/: lib.rs
crates/stem/: Cargo.toml
crates/stem/src/: atom.rs  ipns.rs  lib.rs
crates/system/: Cargo.toml
crates/wagi-guest/: Cargo.toml
crates/wagi-guest/src/: lib.rs
doc/: ai-context.md  ai-tour.md  architecture.md  capabilities.md  capnp-cross-crate.md  cli.md  guest-runtime.md  images.md  keys.md  positioning.md  replay-protection.md  routing.md  rpc-transport.md  shell.md  status.md
doc/api/: wasm-guest.md
doc/designs/: economic-agent-platform.md  fuel-scheduling.md  glia-effects.md  glia-macros.md  http-capability-surface.md  ipld-hamt.md
docs/: PROTOCOL.md  WETWARE_PROTOCOL.md  architecture.md  rpc-transport.md
docs/designs/: economic-agent-platform.md
examples/: README.md  echo_handler_e2e.rs  swappable_stdio.rs
examples/auction/: Cargo.toml  Makefile  README.md  auction.capnp  build.rs
examples/braindump/: Cargo.toml  Makefile  README.md  braindump.capnp  build.rs
examples/chess/: Cargo.toml  Makefile  README.md  build.rs  chess.capnp
examples/chess/boot/: main.capnp
examples/chess/doc/: replay.md
examples/chess/etc/init.d/: chess.glia
examples/chess/src/: lib.rs
examples/counter/: Cargo.toml  Makefile  README.md
examples/default-kernel/: Cargo.toml  Makefile  README.md  build.rs
examples/default-kernel/.cargo/: config.toml
examples/default-kernel/src/: lib.rs
examples/discovery/: Cargo.toml  Makefile  README.md  build.rs  greeter.capnp
examples/echo/: Cargo.toml  Makefile  README.md
examples/echo-cell/: Cargo.toml  README.md
examples/echo-handler/: Cargo.toml
examples/mindshare/: Cargo.toml  Makefile  README.md  build.rs  mindshare.capnp
examples/mindshare/etc/init.d/: mindshare.glia
examples/mindshare/src/: lib.rs
examples/oracle/: Cargo.toml  Makefile  README.md  build.rs
examples/snap-hello-rs/: Cargo.toml  Makefile
guest/: Cargo.toml
guest/src/: lib.rs
guests/child-echo/: Cargo.toml  Makefile  build.rs
guests/child-echo/src/: lib.rs
guests/guest-runtime/: Cargo.toml
guests/kernel/: Cargo.toml  build.rs
guests/pid0/: Cargo.toml  Makefile  build.rs
guests/shell/: Cargo.toml
images/: README.md
lib/fs/: Cargo.toml
lib/fs/src/: lib.rs
lib/net/: Cargo.toml
lib/proc/: Cargo.toml
lib/rpc/: Cargo.toml  proc.capnp
scripts/: install.sh  uninstall.sh
src/: auth.capnp  auth.rs  auth_capnp.rs  boot.rs  cell.rs  cfg.rs  config.rs  daemon_config.rs  default_kernel.rs  discovery.rs  epoch.rs  executor.rs  fs_intercept.rs  host.rs  image.rs  ipfs.rs  jfs.rs  keys.rs  launcher.rs  lib.rs  loaders.rs  main.rs  membrane.rs  metrics.rs  mount.rs  namespace.rs  net.rs  ns.rs  proc.rs  resolver.rs  rpc.rs  runtime.rs  sched.rs  service_manager.rs  services.rs  streams_test.rs  swarm.capnp  swarm_capnp.rs  system.capnp  system.rs  (+2 more)
src/cell/: capnp_test.rs  config.rs  endpoint.rs  executor.rs  mod.rs  pipe.rs  proc.rs  router.rs  runtime.rs  stream.rs  streams.rs  streams_test.rs  swappable.rs
src/cli/: boot.rs  client.rs  main.rs  mod.rs  resolver.rs  shell.rs
src/dispatcher/: mod.rs  server.rs  wagi.rs
src/guest/: mod.rs
src/net/: boot.rs  ipfs.rs  mdns.rs  mod.rs  resolver.rs
src/protocols/: echo.rs
src/rpc/: dialer.rs  http_client.rs  http_listener.rs  listener.rs  membrane.rs  mod.rs  routing.rs  rpc_dialer.rs  rpc_listener.rs  server.rs  stream_dialer.rs  stream_listener.rs  vat_client.rs  (+1 more)
std/: README.md
std/kernel/: Cargo.toml  Makefile  README.md  build.rs
std/kernel/src/: lib.rs  sexpr.rs
std/mcp/: Cargo.toml  Makefile  build.rs
std/mcp/src/: lib.rs
std/shell/: Cargo.toml  README.md  build.rs
std/shell/etc/init.d/: 50-shell.glia
std/shell/src/: lib.rs
tests/: discovery_integration.rs  ipfs_integration.rs  kad_integration.rs  kernel_initd_integration.rs  oracle_serve_integration.rs  router_integration.rs  routing_integration.rs  runtime_spike_test.rs  shell_e2e.rs  snap_hello_rs_http_listener_e2e.rs  status_cell_e2e.rs  status_cell_http_listener_e2e.rs  stdin_shutdown_integration.rs  test_install.sh
wit/: README.md  streams.wit
ww_net/: Cargo.toml
ww_net/src/: lib.rs  net.rs
ww_proc/: Cargo.toml  build.rs
ww_proc/src/: client.rs  lib.rs  server.rs
ww_rpc/: Cargo.toml
(+108 files in other folders)
