[workspace]
members = [
    ".",
    "crates/atom",
    "crates/membrane",
    "guests/child-echo",
    "guests/guest-runtime",
    "guests/pid0",
    "guests/shell",
]

[package]
name = "ww"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies needed for both host and guest
multiaddr = "0.18.2"
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
base64 = "0.22.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3"
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1"
tokio-util = { version = "0.7.17", features = ["codec", "compat"] }
bytes = "1.11.0"
rand = "0.9.2"
base58 = "0.2"
libc = "0.2.177"
tempfile = "3.23.0"
walkdir = "2"

# Host-only dependencies (not needed for WASM guests)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { version = "0.55.0", features = ["tokio", "tcp", "noise", "yamux", "macros", "kad", "identify", "rsa", "request-response"] }
ipfs-api-backend-hyper = "0.6.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tar = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
nix = { version = "0.30.1", features = ["socket"] }
wasmtime = "40.0.0"
wasmtime-wasi = "40.0.0"
wasmtime-wasi-io = "40.0.0"
capnp = "0.23.2"
capnp-rpc = "0.23.0"
membrane = { path = "crates/membrane" }
atom = { path = "crates/atom" }
cid = "0.11"
hex = "0.4"

[[bin]]
name = "ww"
path = "src/cli/main.rs"

[build-dependencies]
capnpc = "0.23.3"

# Optimise WASM guests for size (previously in per-crate Cargo.toml)
[profile.release]
opt-level = "z"
lto = true
strip = true
