[workspace]
members = [
    ".",
    "crates/atom",
    "crates/glia",
    "crates/cache",
    "crates/membrane",
    "crates/schema-id",
    "crates/guest/auth",
    "std/system",
    "crates/kernel",
    "std/shell",
    "examples/chess",
    "examples/discovery",
]
exclude = [
    "examples/echo",     # WASI guest — targets wasm32-wasip2, not host
    "examples/counter",  # WASI guest — targets wasm32-wasip2, not host
    "examples/oracle",   # WASI guest — targets wasm32-wasip2, not host
]

[package]
name = "ww"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies needed for both host and guest
multiaddr = "0.18.2"
anyhow = "1.0.100"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
base64 = "0.22.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3"
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1"
tokio-util = { version = "0.7.17", features = ["codec", "compat"] }
bytes = "1.11.0"
rand = "0.9.2"
base58 = "0.2"
libc = "0.2.177"
tempfile = "3.23.0"
walkdir = "2"
glia = { path = "crates/glia" }
auth = { path = "crates/guest/auth" }
blake3 = "1.8.3"

# Host-only dependencies (not needed for WASM guests)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libp2p = { version = "0.55.0", features = ["tokio", "tcp", "noise", "yamux", "macros", "identify", "rsa", "request-response", "ed25519", "kad"] }
libp2p-core = "0.43"
ipfs-api-backend-hyper = "0.6.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
tar = "0.4"
clap = { version = "4.5.51", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
nix = { version = "0.30.1", features = ["socket"] }
wasmtime = { version = "40.0.0", features = ["call-hook"] }
wasmtime-wasi = "40.0.0"
wasmtime-wasi-io = "40.0.0"
capnp = "0.23.2"
capnp-rpc = "0.23.0"
membrane = { path = "crates/membrane" }
atom = { path = "crates/atom" }
cache = { path = "crates/cache" }
libp2p-stream = "0.3.0-alpha"
blake3 = "1"
cid = "0.11"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
axum = "0.8"
dirs = "5"
cap-std = "3.4"
wasmparser = "0.243"

[[bin]]
name = "ww"
path = "src/cli/main.rs"

[dev-dependencies]
schema-id = { path = "crates/schema-id" }
wasm-encoder = "0.243"

[build-dependencies]
capnpc = "0.23.3"

# Optimise WASM guests for size; host binary overridden below.
[profile.release]
opt-level = "z"
lto = true
strip = true

# Host binary: optimize for speed (wasmtime JIT benefits from opt-level 2).
[profile.release.package.ww]
opt-level = 2
