[package]
name = "wetware_guest"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASI guest utilities for Cap'n Proto RPC over wasi:cli streams."
repository = "https://github.com/wetware/rs"
publish = false

[dependencies]
capnp-rpc = "0.21"
futures = { version = "0.3", features = ["executor"] }
wasip2 = "1.0"
