[package]
name = "ww_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
capnpc = "0.19.0"

[dependencies]
anyhow = "1"
wasmer = "4.2.8"
wasmer-compiler-cranelift = "4.2.8"
wasmer-middlewares = "4.2.8"
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.4", features = ["compat"] }
capnp = "0.19.3"
capnp-rpc = "0.19.0"
