[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5"
capnp = "0.23.2"
capnp-rpc = "0.23.0"
log = "0.4.29"
multiaddr = "0.18"
wasip2 = "1.0.2"
hex = "0.4"
glia = { path = "../glia" }
system = { path = "../../std/system" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
capnpc = "0.23.3"
schema-id = { path = "../schema-id" }
