[package]
name = "membrane"
version = "0.1.0"
edition = "2021"
description = "Epoch-scoped capability primitives over Cap'n Proto RPC"

[build-dependencies]
capnpc = "0.25.3"

[dependencies]
capnp = "0.25.3"
capnp-rpc = "0.25.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
libp2p-core = "0.43"
libp2p-identity = { version = "0.2", features = ["ed25519"] }
rand = "0.8"
auth = { path = "../guest/auth" }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
