[package]
name = "stem"
version = "0.1.0"
edition = "2021"
description = "Epoch source abstraction: atomic (on-chain) and eventual (IPNS) backends"

[dependencies]
anyhow = "1"
async-trait = "0.1"
atom = { path = "../atom" }
membrane = { path = "../membrane" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
