[package]
name = "mindshare"
version = "0.1.0"
edition = "2021"

[workspace]  # standalone — not part of the host workspace

[dependencies]
capnp     = "0.23.2"
capnp-rpc = "0.23.0"
futures   = "0.3"
log       = "0.4"
wasip2    = "1.0.2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
system     = { path = "../../std/system" }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
tokio      = { version = "1", features = ["rt", "macros", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
capnpc = "0.23.3"
capnp  = "0.23.2"
schema-id = { path = "../../crates/schema-id" }
