[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1.9.0"
futures = "0.3.31"
ipfs-api-backend-hyper = "0.6.0"
ipfs-api-prelude = "0.6.0"
libp2p = { version = "0.54.1", features = ["full"] }
rand = "0.8"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmer = { version = "5.0.5-rc1", features = ["sys"] }
wasmer-wasix = { version = "0.35" }
net = { path = "../../lib/net" }
