[package]
name = "mcp"
version = "0.1.0"
edition = "2021"

[workspace]  # standalone — not part of the host workspace

[dependencies]
capnp     = "0.23.2"
capnp-rpc = "0.23.0"
glia      = { path = "../../crates/glia" }
log       = "0.4"
wasip2    = "1.0.2"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
system    = { path = "../system" }
caps      = { path = "../caps" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
# No build deps — schemas come from the caps crate.
