[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[workspace]  # standalone — not part of the host workspace

[dependencies]
capnp = "0.25.3"
capnp-rpc = "0.25.0"
glia      = { path = "../../crates/glia" }
log       = "0.4"
wasip2    = "1.0.2"
bs58      = "0.5"
multiaddr = "0.18.2"
rand      = "0.9"
system    = { path = "../system" }
caps      = { path = "../caps" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
capnpc = "0.25.3"
capnp = "0.25.3"
schema-id = { path = "../../crates/schema-id" }
